# Makefile.am for libatalk/unicode/charsets

noinst_LTLIBRARIES = libcharsets.la

CFLAGS = -I$(top_srcdir)/sys @CFLAGS@
LIBS = 

libcharsets_la_SOURCES = \
	mac_roman.c	\
	mac_hebrew.c	\
	mac_centraleurope.c	\
	mac_turkish.c \
	mac_cyrillic.c \
	generic_mb.c

noinst_HEADERS = \
	mac_roman.h \
	mac_centraleurope.h \
	mac_hebrew.h \
	mac_turkish.h \
	mac_cyrillic.h \
	generic_mb.h
